# micro-saas-financeiro-ia

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.json
apps/api-gateway/: jest.config.cts  package.json
apps/api-gateway/src/: main.ts
apps/api-gateway/src/app/: app.module.ts  auth.middleware.ts
apps/auth/: jest.config.cts  package.json
apps/auth/src/: main.ts
apps/auth/src/app/: app.module.ts
apps/auth/src/app/auth/: auth.controller.ts  auth.module.ts
apps/auth/src/app/users/: users.controller.ts  users.module.ts
apps/finance/: jest.config.cts  package.json  tsconfig.app.json
apps/finance/src/: main.ts
apps/finance/src/app/: app.module.ts
apps/finance/src/app/categories/: categories.controller.ts  categories.module.ts
apps/frontend/: package.json  tailwind.config.js  tsconfig.json
apps/frontend/src/app/: global.css  layout.tsx  page.tsx
apps/frontend/src/lib/: api.ts
apps/frontend/src/store/: auth-store.ts
apps/ia-service/: README.md  project.json  pyproject.toml
apps/ia-service/ia_service/: index.py
apps/ia-service/tests/: test_index.py
apps/users/: jest.config.cts  package.json
docker/: init.sql  wait-for-it.sh
libs/common/: jest.config.cts  package.json
libs/common/src/: index.ts
libs/contracts/: jest.config.cts  package.json
libs/contracts/src/lib/: contracts.module.ts
libs/database/: jest.config.cts
libs/database/src/: index.ts
libs/database/src/lib/: abstract.entity.ts  data-source.ts  database.module.ts  snake-naming.strategy.ts
(+50 files in other folders)
