[tool.coverage.run]
branch = true
source = [ "ia_service" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../coverage/apps/ia-service/html' --cov-report xml:'../../coverage/apps/ia-service/coverage.xml' --junitxml='../../reports/apps/ia-service/unittests/junit.xml' --html='../../reports/apps/ia-service/unittests/html/index.html'"

[tool.poetry]
name = "ia_service"
version = "1.0.0"
description = ""
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "ia_service"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.11"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
